# agro_pulse-API

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  makefile  pyproject.toml  schema.yml
core_agropulse/: manage.py
core_agropulse/accounts/: apps.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
core_agropulse/accounts/migrations/: 0001_initial.py  0002_alter_user_role.py  0003_rename_full_user_full_name.py
core_agropulse/agropulse/: asgi.py  settings.py  urls.py  wsgi.py
core_agropulse/delivery/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
core_agropulse/delivery/migrations/: 0001_initial.py
core_agropulse/orders/: apps.py  models.py  serializers.py  tests.py  urls.py  views.py
core_agropulse/orders/migrations/: 0001_initial.py
core_agropulse/payments/: admin.py  apps.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
core_agropulse/payments/migrations/: 0001_initial.py  0002_transfer_virtualaccount_virtualaccounttransaction_and_more.py  0003_alter_virtualaccount_owner_fields.py
core_agropulse/predictions/: admin.py  apps.py  models.py  services.py  tests.py  urls.py  views.py
core_agropulse/predictions/migrations/: 0001_initial.py
core_agropulse/produce/: apps.py  models.py  serializers.py  tests.py  urls.py  views.py
core_agropulse/produce/migrations/: 0001_initial.py
core_agropulse/subscriptions/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
core_agropulse/subscriptions/migrations/: 0001_initial.py
(+1 files in other folders)
