[project]
name = "agropulse"
version = "0.1.0"
description = "AI-powered produce demand forecasting and payment coordination platform for farmers, buyers, and riders."
authors = [
    {name = "Oluwagbeminiyi Agbedejobi",email = "gagbedejobi@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "psycopg2 (>=2.9.12,<3.0.0)",
    "django (>=6.0.5,<7.0.0)",
    "djangorestframework (>=3.17.1,<4.0.0)",
    "django-cors-headers (>=4.9.0,<5.0.0)",
    "djangorestframework-simplejwt (>=5.5.1,<6.0.0)",
    "python-decouple (>=3.8,<4.0)",
    "pre-commit (>=4.6.0,<5.0.0)",
    "django-otp (>=1.7.0,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "psycopg2-binary (>=2.9.12,<3.0.0)"
]

[tool.ruff.lint]
extend-ignore = ["F403", "F405"]
